<resources>
    <string name="app_name">Nihon Foods</string>
    <string name="japanese_food">Japanese Foods</string>
    <string name="design_by">Design By\n PRM392 - Group 5</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="choose_location">To provide you with the best dining experience, we need your permission to access your device\'s location...</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="city">City</string>
    <string name="finish">Finish</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send_code">Send Code</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="enter_6_digit_code">Enter 6-digit code</string>
    <string name="verify">Verify</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="back_to_login">Back to login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_orders">History orders</string>
    <string name="personal_information">Personal information</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="basic_membership">Basic membership</string>
    <string name="profile">Profile</string>
    <string name="created_at">Created at:</string>
    <string name="status">Status:</string>
    <string name="address">Address:</string>
    <string name="role">Role:</string>
    <string name="phone_number">Phone number:</string>
    <string name="name_a">Name:</string>
    <string name="update_information">Update Information</string>
    <string name="save">Save</string>
</resources>